tests/syntax/bad/testfile-expr12-1.scala
class A { def m() { var x = 0 = 0 } }
object Main { def main(args: Array[String]) { } }
